classDiagram

    class SalesReceipt {
      kvitteringsNummer
      udstedtDato
      totalBeloeb
      momsBeloeb
      betaltKontant
      betaltMobil
    }

    class SalesReceiptLine {
      reolnummer
      enhedsPris
    }

    class Kommision {
        avanceProcent
        gyldigFra
        gyldigTil
    }

    SalesReceipt "1" -- "*" SalesReceiptLine : indeholder
    SalesReceiptLine "*" -- "1" Kommision : avance